Fill missing values with mean

--- a/airbnb.ipynb
+++ b/airbnb.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {
     "tags": []
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +80,29 @@
     "\n",
     "# Add binary column for missing acceptance rate and set missing values to 0\n",
     "df.acceptance_rate_missing = df.host_acceptance_rate.notnull().astype(int)\n",
-    "df.host_acceptance_rate.fillna(0, inplace=True)"
+    "df.host_acceptance_rate.fillna(0, inplace=True)\n",
+    "\n",
+    "# Set missing values for reviews to mean\n",
+    "df.review_scores_rating.fillna(df.review_scores_rating.mean(), inplace=True)\n",
+    "df.review_scores_accuracy.fillna(df.review_scores_accuracy.mean(), inplace=True)\n",
+    "df.review_scores_cleanliness.fillna(df.review_scores_cleanliness.mean(), inplace=True)\n",
+    "df.review_scores_checkin.fillna(df.review_scores_checkin.mean(), inplace=True)\n",
+    "df.review_scores_communication.fillna(df.review_scores_communication.mean(), inplace=True)\n",
+    "df.review_scores_location.fillna(df.review_scores_location.mean(), inplace=True)\n",
+    "df.review_scores_value.fillna(df.review_scores_value.mean(), inplace=True)\n",
+    "\n",
+    "# Set missing values for reviews per month to 0 (never gotten reviews)\n",
+    "df.reviews_per_month.fillna(0, inplace=True)\n",
+    "\n",
+    "# Fill missing roomspecifications with mean\n",
+    "df.bathrooms.fillna(df.bathrooms.mean(), inplace=True)\n",
+    "df.bedrooms.fillna(df.bedrooms.mean(), inplace=True)\n",
+    "df.beds.fillna(df.beds.mean(), inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
@@ -93,7 +110,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 8795 entries, 0 to 8794\nData columns (total 43 columns):\n #   Column                                        Non-Null Count  Dtype         \n---  ------                                        --------------  -----         \n 0   host_since                                    8794 non-null   datetime64[ns]\n 1   host_response_rate                            8795 non-null   object        \n 2   host_acceptance_rate                          8795 non-null   object        \n 3   host_is_superhost                             8795 non-null   int64         \n 4   host_neighbourhood                            5701 non-null   object        \n 5   host_listings_count                           8794 non-null   float64       \n 6   host_has_profile_pic                          8795 non-null   int64         \n 7   host_identity_verified                        8795 non-null   int64         \n 8   neighbourhood_cleansed                        8795 non-null   object        \n 9   latitude                                      8795 non-null   float64       \n 10  longitude                                     8795 non-null   float64       \n 11  property_type                                 8795 non-null   object        \n 12  room_type                                     8795 non-null   object        \n 13  accommodates                                  8795 non-null   int64         \n 14  bathrooms                                     8791 non-null   float64       \n 15  bedrooms                                      8787 non-null   float64       \n 16  beds                                          8744 non-null   float64       \n 17  price                                         8795 non-null   float64       \n 18  minimum_nights                                8795 non-null   int64         \n 19  maximum_nights                                8795 non-null   int64         \n 20  calendar_updated                              8795 non-null   object        \n 21  availability_30                               8795 non-null   int64         \n 22  availability_60                               8795 non-null   int64         \n 23  availability_90                               8795 non-null   int64         \n 24  availability_365                              8795 non-null   int64         \n 25  calendar_last_scraped                         8795 non-null   datetime64[ns]\n 26  number_of_reviews                             8795 non-null   int64         \n 27  number_of_reviews_ltm                         8795 non-null   int64         \n 28  first_review                                  6754 non-null   datetime64[ns]\n 29  last_review                                   6754 non-null   datetime64[ns]\n 30  review_scores_rating                          6574 non-null   float64       \n 31  review_scores_accuracy                        6567 non-null   float64       \n 32  review_scores_cleanliness                     6570 non-null   float64       \n 33  review_scores_checkin                         6557 non-null   float64       \n 34  review_scores_communication                   6565 non-null   float64       \n 35  review_scores_location                        6555 non-null   float64       \n 36  review_scores_value                           6554 non-null   float64       \n 37  instant_bookable                              8795 non-null   int64         \n 38  calculated_host_listings_count                8795 non-null   int64         \n 39  calculated_host_listings_count_entire_homes   8795 non-null   int64         \n 40  calculated_host_listings_count_private_rooms  8795 non-null   int64         \n 41  calculated_host_listings_count_shared_rooms   8795 non-null   int64         \n 42  reviews_per_month                             6754 non-null   float64       \ndtypes: datetime64[ns](4), float64(15), int64(17), object(7)\nmemory usage: 2.9+ MB\n"
+     "text": "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 8795 entries, 0 to 8794\nData columns (total 43 columns):\n #   Column                                        Non-Null Count  Dtype         \n---  ------                                        --------------  -----         \n 0   host_since                                    8794 non-null   datetime64[ns]\n 1   host_response_rate                            8795 non-null   object        \n 2   host_acceptance_rate                          8795 non-null   object        \n 3   host_is_superhost                             8795 non-null   int64         \n 4   host_neighbourhood                            5701 non-null   object        \n 5   host_listings_count                           8794 non-null   float64       \n 6   host_has_profile_pic                          8795 non-null   int64         \n 7   host_identity_verified                        8795 non-null   int64         \n 8   neighbourhood_cleansed                        8795 non-null   object        \n 9   latitude                                      8795 non-null   float64       \n 10  longitude                                     8795 non-null   float64       \n 11  property_type                                 8795 non-null   object        \n 12  room_type                                     8795 non-null   object        \n 13  accommodates                                  8795 non-null   int64         \n 14  bathrooms                                     8795 non-null   float64       \n 15  bedrooms                                      8795 non-null   float64       \n 16  beds                                          8795 non-null   float64       \n 17  price                                         8795 non-null   float64       \n 18  minimum_nights                                8795 non-null   int64         \n 19  maximum_nights                                8795 non-null   int64         \n 20  calendar_updated                              8795 non-null   object        \n 21  availability_30                               8795 non-null   int64         \n 22  availability_60                               8795 non-null   int64         \n 23  availability_90                               8795 non-null   int64         \n 24  availability_365                              8795 non-null   int64         \n 25  calendar_last_scraped                         8795 non-null   datetime64[ns]\n 26  number_of_reviews                             8795 non-null   int64         \n 27  number_of_reviews_ltm                         8795 non-null   int64         \n 28  first_review                                  6754 non-null   datetime64[ns]\n 29  last_review                                   6754 non-null   datetime64[ns]\n 30  review_scores_rating                          8795 non-null   float64       \n 31  review_scores_accuracy                        8795 non-null   float64       \n 32  review_scores_cleanliness                     8795 non-null   float64       \n 33  review_scores_checkin                         8795 non-null   float64       \n 34  review_scores_communication                   8795 non-null   float64       \n 35  review_scores_location                        8795 non-null   float64       \n 36  review_scores_value                           8795 non-null   float64       \n 37  instant_bookable                              8795 non-null   int64         \n 38  calculated_host_listings_count                8795 non-null   int64         \n 39  calculated_host_listings_count_entire_homes   8795 non-null   int64         \n 40  calculated_host_listings_count_private_rooms  8795 non-null   int64         \n 41  calculated_host_listings_count_shared_rooms   8795 non-null   int64         \n 42  reviews_per_month                             8795 non-null   float64       \ndtypes: datetime64[ns](4), float64(15), int64(17), object(7)\nmemory usage: 2.9+ MB\n"
     }
    ],
    "source": [
